--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -239,10 +239,10 @@ $duration) {
                 font-size: 2em;
                 cursor: pointer;
                 margin: 0;
-                transition: color 0.15s linear;
+                transition: opacity 0.15s linear;
                 color: black;
                 &:hover {
-                    color: rgba(255, 255, 255, 0.85);
+                    opacity: .6;
                 }
             }
         }
@@ -302,8 +302,8 @@ $duration) {
     &-close {
         color: black;
         text-align: right;
-        width: calc(100% - 40px);
         margin: 20px;
+        right: 0;
         cursor: pointer;
         transition: color 0.15s linear;
         position: absolute;
@@ -409,19 +409,24 @@ $duration) {
     }
     &-nav {
         position: absolute;
-        color: black;
         text-align: right;
         top: 50px;
         right: 150px;
         background: white;
-        &-title{
+        color: black;
+        z-index: 1;
+        padding: 10px;
+        border-radius: 10px;
+        &-title {
             @include shorttText();
+            color: black;
         }
-        &-button{
+        &-button {
             @include shorttText();
             cursor: pointer;
             transition: opacity .25s linear;
-            &:hover{
+            color: black;
+            &:hover {
                 opacity: .6;
             }
         }
@@ -432,8 +437,8 @@ $duration) {
             top: 20%;
             left: 15%;
             transform: translateX(-50%) translateY(-50%);
-            width: 300px;
-            height: 300px;
+            width: 600px;
+            height: 600px;
             display: flex;
             background-size: contain;
             background-position: center center;
@@ -448,82 +453,122 @@ $duration) {
                 flex: 1;
             }
         }
-        &-wibbly {
+        &-about {
             position: absolute;
-            width: 300px;
-            height: 300px;
             transform: translateX(-50%) translateY(-50%);
             top: 60%;
             left: 35%;
-        }
-        &-blackhole {
-            height: 100vh;
-            width: 100vw;
-            position: relative;
-            display: flex;
-            &>canvas {
-                position: relative;
-                width: 100%;
-                height: 100%;
-                margin: auto;
+            color: white;
+            &-text {
+                color: white;
+                @include shorttText();
             }
-            &-centerHover {
-                width: 255px;
-                height: 255px;
-                background-color: transparent;
-                border-radius: 50%;
+        }
+         :root {
+            --portalDeg: 1;
+            --portalX: -50%;
+            --portalY: -50%;
+        }
+        &-portal {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            &:hover>.modal-unit-portal-layer {
+                width: 150px;
+                height: 150px;
+            }
+            &:hover>.modal-unit-portal-text {
+                opacity: 0.6;
+                animation: none;
+            }
+            &-layer {
                 position: absolute;
-                left: 38%;
-                top: 38%;
-                margin-top: -128px;
-                margin-left: -128px;
-                z-index: 1;
-                cursor: pointer;
-                line-height: 255px;
-                text-align: center;
-                transition: all 500ms;
-                &.open {
-                    opacity: 0;
-                    pointer-events: none;
+                top: 50%;
+                left: 50%;
+                transform: translate(var(--portalX, -50%), var(--portalY, -50%)) rotate(0deg);
+                font-size: 20vmin;
+                width: 200px;
+                height: 200px;
+                border-radius: 90% 95% 85% 105%;
+                background: #0f0;
+                //mix-blend-mode: screen;
+                filter: hue-rotate(0deg);
+                animation: portalWobble calc(150ms * var(--portalT)) linear infinite;
+                transform-origin: -var(--portalY) -var(--portalX);
+                box-shadow: 0 0 .5em .2em #000 inset, 0 0 .15em 0 #fff;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                transition: width calc(10ms * var(--portalT)) linear, height calc(10ms * var(--portalT)) linear;
+                &::after {
+                    font-size: 1em;
+                    // content: '☻';
+                    white-space: nowrap;
                 }
-                &:hover span {
-                    color: #DDD;
-                    &:before {
-                        background-color: #DDD;
-                    }
-                    &:after {
-                        background-color: #DDD;
-                    }
+                &:nth-child(1) {
+                    --portalX: -53%;
+                    --portalY: -53%;
+                    --portalT: 37;
                 }
-                span {
-                    color: #666;
-                    font-family: serif;
-                    font-size: 18px;
-                    position: relative;
-                    transition: all 500ms;
-                    &:before {
-                        content: '';
-                        display: inline-block;
-                        height: 1px;
-                        width: 16px;
-                        margin-right: 12px;
-                        margin-bottom: 4px;
-                        background-color: #666;
-                        transition: all 500ms;
-                    }
-                    &:after {
-                        content: '';
-                        display: inline-block;
-                        height: 1px;
-                        width: 16px;
-                        margin-left: 12px;
-                        margin-bottom: 4px;
-                        background-color: #666;
-                        transition: all 500ms;
-                    }
+                &:nth-child(2) {
+                    --portalX: -47%;
+                    --portalY: -52%;
+                    --portalT: 58;
+                }
+                &:nth-child(3) {
+                    --portalX: -45%;
+                    --portalY: -50%;
+                    --portalT: 46;
+                }
+                &:nth-child(4) {
+                    --portalX: -53%;
+                    --portalY: -45%;
+                    --portalT: 72;
+                }
+                &:nth-child(5) {
+                    --portalX: -55%;
+                    --portalY: -45%;
+                    --portalT: 62;
                 }
             }
+            &-text {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50%);
+                @include shorttText();
+                margin: 0;
+                transition: opacity 0.5s linear;
+                opacity: 0;
+                color: white;
+                animation: portalFlicker 2s linear infinite;
+                text-align: center;
+            }
         }
+    }
+}
+
+@keyframes portalWobble {
+    to {
+        filter: hue-rotate(360deg);
+        transform: translate(var(--portalX), var(--portalY)) rotate(360deg);
+    }
+}
+
+@keyframes portalFlicker {
+    0% {
+        opacity: 0.4;
+    }
+    35% {
+        opacity: 0.1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.4;
     }
 }
 
