--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -85,6 +85,22 @@ $duration) {
         @include absoluteCenter();
         background: white;
     }
+    &-previous {
+        position: absolute;
+        top: 0;
+        transform-origin: left;
+        transform: rotate(-90deg) translateX(-82%) translateY(-50%);
+        @include shorttText();
+        padding: 2px;
+        margin: 0;
+        cursor: pointer;
+        opacity: 1;
+        color: black;
+        transition: opacity .7s ease-in-out, color .25s linear;
+        &:hover{
+            color: rgba(0, 0, 0, 0.6);
+        }
+    }
     &-menu {
         width: 249px; //marginAdjust(100%, 28px);
         height: 421.500px; //marginAdjust(100%, 28px);
@@ -98,7 +114,7 @@ $duration) {
         &-container {
             opacity: 0;
             transition: width 0.75s ease-out, height 0.75s ease-out, opacity 2s ease-in-out, border 1.45s ease-in-out;
-            overflow: hidden;
+            //overflow: hidden;
             width: 100%;
             height: 100%;
             position: absolute;
@@ -464,7 +480,7 @@ $duration) {
                 @include shorttText();
             }
         }
-         :root {
+        :root {
             --portalDeg: 1;
             --portalX: -50%;
             --portalY: -50%;
